--- a/Aula_1/exercicio/exercicio.html
+++ b/Aula_1/exercicio/exercicio.html
@@ -20,7 +20,7 @@
                 <br><a href="https://www.amazon.com.br/Divinos-rivais-Sucesso-TikTok-Rebecca/dp/6585348168">Link para encontrar esse livro na Amazon</a><br><br>
             </ul>
         <h2>Resenhas litérarias de outras pessoas:</h2>
-        <p>Livro Powerless</p>
+        <p style="color: blue;">Livro Powerless</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/fXim-qSDc5Q?si=QpLHjufzijQDIQVI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         <p>Livro A Incoveniente loja de Conveniência</p>
